# charms-explorer

./: .gitignore  how-to-migrate.md
api/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml
api/deploy/: deploy.sh  redeploy.sh  set-env-vars.sh
api/src/: main.rs
api/src/config/: mod.rs
api/src/db/: error.rs  mod.rs  pool.rs
api/src/db/repositories/: address_transactions_repository.rs  asset_repository.rs  charm_repository.rs  dex_orders_repository.rs  likes_repository.rs  mod.rs  monitored_addresses_repository.rs  stats_holders_repository.rs  transaction_repository.rs  utxo_repository.rs
api/src/entity/: address_transactions.rs  address_utxos.rs  assets.rs  bookmark.rs  charms.rs  dex_orders.rs  likes.rs  mod.rs  monitored_addresses.rs  prelude.rs  stats_holders.rs  summary.rs  transactions.rs
api/src/error/: mod.rs
api/src/handlers/: assets.rs  bitcoin.rs  charms.rs  dex_orders.rs  diagnostic.rs  diagnostics_address.rs  health.rs  mod.rs  reset.rs  stats_holders.rs  status.rs  transactions.rs  wallet.rs
api/src/handlers/status/: bitcoin_node.rs  charm_stats.rs  db_queries.rs  handler.rs  mod.rs  network_status.rs
api/src/models/: mod.rs
api/src/services/: address_monitor_service.rs  asset_service.rs  charm_service.rs  dex_orders_service.rs  diagnostic.rs  health.rs  maestro_service.rs  mempool_space_service.rs  mod.rs  stats_holders_service.rs  transaction_service.rs  wallet_service.rs
database/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml
database/_rjj/: context.md
database/deploy/: deploy.sh
database/init/: 01-schema.sql  init.sql
database/migration/: Cargo.toml
database/migration/src/: lib.rs  m20250518_000001_add_blockchain_network_fields.rs  m20250519_000001_add_blockchain_to_bookmark.rs  m20250524_000001_fix_bookmark_primary_key.rs
database/migrations/: 001_create_stats_holders.sql  002_add_mempool_support.sql  003_add_decimals_to_assets.sql  004_add_tags_column.sql  005_create_dex_orders.sql  006_add_tag_stats_to_summary.sql  007_add_verified_column.sql  008_add_is_reference_nft.sql  009_create_block_status.sql  009b_reset_for_reindex.sql  009c_fix_total_supply.sql  010_fix_token_supplies.sql  m20260221_000001_mempool_indexing.sql  m20260228_000001_address_utxos_and_backfill.sql  m20260228_000002_address_transactions.sql  m20260301_000001_transactions_mempool_columns.sql  m20260323_000001_tx_type_column.sql  m20260611_000001_stats_holders_network_column.sql  m20260613_000001_mainnet_readiness.sql  m20260615_000001_charms_pk_with_app_id.sql  m20260622_000001_assets_unique_app_id_network.sql
database/src/: main.rs
database/src/commands/: create.rs  migrate.rs  mod.rs
database/src/config/: mod.rs
database/src/migration/: m20250202_000001_add_spent_to_charms.rs  m20250203_000001_add_vout_to_charms.rs  m20250203_000002_create_spells_table.rs  m20250203_000003_update_charms_primary_key.rs  m20250203_000004_remove_address_from_spells.rs  m20250203_000005_add_app_id_to_charms.rs  m20250204_000001_add_amount_to_charms.rs  m20250204_000002_add_decimals_to_assets.rs  m20250415_000001_create_tables.rs  m20250514_000001_add_network_to_bookmark.rs  m20250618_000001_create_summary_table.rs  m20250619_000001_create_likes_table.rs  m20250916_000001_create_assets_table.rs  m20250919_101700_add_address_to_charms.rs  m20260218_000001_create_address_utxos_table.rs  m20260402_000001_add_cardano_fields_to_assets.rs  mod.rs
indexer/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml
indexer/.cargo/: config.toml
indexer/_rjj/: context.md  tasklist.md
indexer/db/: init.sql
indexer/deploy/: README.md  check-app.sh  deploy.sh  redeploy.sh  rjj.md  set-env-vars.sh
indexer/migration/: Cargo.toml
indexer/migration/src/: lib.rs  m20250415_000002_add_status_fields.rs  m20250508_000001_add_timestamp_to_bookmark.rs
indexer/scripts/: clear_data.sh  monitor_performance.sh  set_start_blocks.sh
indexer/src/: lib.rs  main.rs
indexer/src/application/: mod.rs
indexer/src/application/indexer/: mempool_processor.rs  mod.rs  network_manager.rs  processor.rs  processor_trait.rs  supervisor.rs
indexer/src/application/indexer/bitcoin_processor/: batch_processor.rs  block_finder.rs  block_processor.rs  mod.rs  parallel_tx_processor.rs  retry_handler.rs  summary_updater.rs
indexer/src/application/indexer/block/: batch.rs  bitcoin_processor.rs  detection.rs  mempool_consolidator.rs  mod.rs  processor.rs  reindex.rs  reorg.rs  retry.rs  spent_tracker.rs  summary.rs  utxo_indexer.rs
indexer/src/application/indexer/mempool/: cleanup.rs  dex_persistence.rs  mod.rs  processor.rs  reconcile.rs  (+2 more)
indexer/src/application/reindexer/: batch_processor.rs  block_parser.rs  mod.rs  stats_updater.rs  types.rs
indexer/src/config/: mod.rs
indexer/src/domain/: errors.rs
indexer/src/domain/models/: asset.rs  asset_metadata.rs  bookmark.rs  charm.rs  mod.rs  spell.rs  transaction.rs
indexer/src/domain/services/: address_extractor.rs  app_id.rs  asset_supply_calculator.rs  charm_detector.rs  charm_queue_service.rs  charm_service.rs  diagnostic_service.rs  mod.rs  native_charm_parser.rs  reference_nft_cache.rs  tx_analyzer.rs
indexer/src/infrastructure/: mod.rs
indexer/src/infrastructure/api/: client.rs  error.rs  mod.rs
indexer/src/infrastructure/bitcoin/: client.rs  error.rs  mod.rs  provider_factory.rs  simple_client.rs
indexer/src/infrastructure/cardano/: metadata.rs
indexer/src/infrastructure/maestro/: client.rs  mod.rs
indexer/src/infrastructure/persistence/: connection.rs  error.rs  factory.rs  mod.rs
indexer/src/infrastructure/queue/: charm_queue.rs  database_writer.rs  mod.rs
indexer/src/infrastructure/web/: mod.rs  routes.rs  server.rs
indexer/src/utils/: logging.rs  metrics.rs
indexer/tests/: charm_detection_test.rs  it_charm_repository.rs  it_mempool_spends_repository.rs  it_stats_holders_repository.rs  smoke.rs  test_environment.rs
indexer/tests/common/: mod.rs
indexer/tests/fixtures/: schema.sql
(+143 files in other folders)
