[package]
name = "charms-explorer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7.4"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
tokio = { version = "1.32.0", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json"] }

# Utilities
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.20"
env_logger = "0.10.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
