[package]
name = "charms-explorer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.1", features = ["macros"] }
tower = { version = "0.5", features = ["limit", "timeout", "buffer"] }
tower-http = { version = "0.6.2", features = ["cors", "trace", "timeout", "limit"] }
tokio = { version = "1.0", features = ["full"] }
http = "1.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json", "with-rust_decimal"] }
rust_decimal = "1.32"

# Utilities
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Bitcoin
bitcoincore-rpc = "0.18.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# HTTP client (for QuickNode API)
reqwest = { version = "0.12", features = ["json"] }
