[package]
name = "charms-database"
version = "0.1.0"
edition = "2021"
description = "Database management service for Charms Explorer"

[dependencies]
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
sea-orm-migration = "0.12"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[workspace]
members = []
