[package]
name = "charms-indexer"
version = "0.2.6"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
bitcoincore-rpc = "0.17.0"
dotenv = "0.15.0"
log = "0.4.20"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Charms integration (v13 from git - not yet on crates.io)
charms-client = { git = "https://github.com/CharmsDev/charms.git", branch = "main" }
charms-data = { git = "https://github.com/CharmsDev/charms.git", branch = "main" }
bitcoin = "0.32.7"
anyhow = "1.0.99"
cml-core = "6.2.0"

# SeaORM dependencies
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json", "with-rust_decimal"] }
rust_decimal = "1.32"
blake2 = "0.10"
bech32 = "0.11"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
pretty_assertions = "1.4"
serial_test = "3.1"
